# Widgets

CircleProgressBar/app/: CMakeLists.txt  build.gradle
CircleProgressBar/app/src/androidTest/java/com/pinguo/camera360/: ExampleInstrumentedTest.kt
CircleProgressBar/app/src/main/: AndroidManifest.xml
CircleProgressBar/app/src/main/cpp/: hello.c  native-lib.cpp
CircleProgressBar/app/src/main/include/: com_pinguo_camera360_Hello.h
CircleProgressBar/app/src/main/java/com/pinguo/camera360/: AirHockeyActivity.kt  CameraXActivity.kt  Hello.java  JNIActivity.java  MainActivity.kt  MediaPlayerActivity.kt  OpenGLActivity.kt  SurfaceViewActivity.kt  TextureViewActivity.kt  WidgetApplication.kt  WidgetsActivity.kt
CircleProgressBar/app/src/main/java/us/pinguo/androidsdk1/: PGShaderHolder.java
CircleProgressBar/app/src/main/res/layout/: activity_camerax.xml  activity_jni.xml  activity_main.xml  activity_open_gl.xml  activity_surface_view.xml  activity_texture_view.xml  activity_widgets.xml  fragment_main.xml  layout_pgfocus.xml
CircleProgressBar/app/src/main/res/raw/: background_blur_fragment_shader.glsl  background_blur_vertex_shader.glsl  particle_fragment_shader.glsl  particle_vertext_shader.glsl  particles_vertext_shader.glsl  simple_fragment_shader.glsl  simple_vertex_shader.glsl  texture_fragment_shader.glsl  texture_vertex_shader.glsl
CircleProgressBar/app/src/main/res/values/: attrs.xml  dimens.xml  ids.xml  strings.xml
CircleProgressBar/app/src/main/res/values-es/: strings.xml
CircleProgressBar/app/src/main/res/values-in/: strings.xml
CircleProgressBar/app/src/main/res/values-ja/: strings.xml
CircleProgressBar/app/src/main/res/values-ko/: strings.xml
CircleProgressBar/app/src/main/res/values-pt/: strings.xml
CircleProgressBar/app/src/main/res/values-th/: strings.xml
CircleProgressBar/app/src/main/res/values-vi/: strings.xml
CircleProgressBar/app/src/main/res/values-zh-rCN/: strings.xml
CircleProgressBar/app/src/main/res/values-zh-rTW/: strings.xml
CircleProgressBar/app/src/test/java/com/pinguo/camera360/: ExampleUnitTest.kt
(+95 files in other folders)
